# Barium

./: README.md
Plugin/: pom.xml
Plugin/src/main/java/me/etho/barium/: Barium.java
Plugin/src/main/java/me/etho/barium/Backend/Api/: BariumApi.java
Plugin/src/main/java/me/etho/barium/Backend/Packets/: Packet.java
Plugin/src/main/java/me/etho/barium/Backend/Packets/Play/: PlayerJoin.java  PlayerLeave.java  PlayerMovement.java
Plugin/src/main/java/me/etho/barium/Backend/Packets/Service/: NodeKey.java  NodeRegister.java  NodeUnregister.java
Plugin/src/main/java/me/etho/barium/Backend/Utils/: ApiUtils.java
Plugin/src/main/java/me/etho/barium/Listeners/: NetPacketListener.java  PlayerPacketListener.java
Plugin/src/main/resources/: plugin.yml
server/: Cargo.toml
server/src/: main.rs
server/src/anticheat/: node_manager.rs
server/src/anticheat/node/: node.rs  player.rs
server/src/apis/plugin/: server_manager.rs
server/src/apis/plugin/handlers/: play.rs  service.rs
server/src/apis/plugin/handlers/packets/: node_register_packet.rs  node_unregister_packet.rs  player_join_packet.rs  player_leave_packet.rs  player_movement_packet.rs
server/src/apis/plugin/packets/: packet.rs  play.rs  service.rs
