[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Networking
tokio = "1.25.0"
# Web framework
rocket = { version = "0.5.0-rc.2", features = ["json"] }
# OpenAPI/Swagger
utoipa = { version = "3.0.2", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["rocket"] }
# Serde & Json
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
# Database
sled = "0.34.7"
# Randomization
rand = "0.8.5"
# Byte / Networking
byteorder = "1.4.3"