[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Networking
tokio = { version = "1.25.0", features = ["full"] }
# Serde & Json
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
# Randomization
rand = "0.8.5"
# Byte / Networking
byteorder = "1.4.3"
# Debug
function_name = "0.3.0"